sync with daneshjoyar backend