@@ -1,74 +1,46 @@
-import java.util.*;
-/**
- * Represents a course in an academic program.
- * Each course has a name, credit value, associated students, and assignments.
- */
-public class Course {
-    BeheshtiUniversityField beheshtiUniversityField;
-    String name;
-    int credit;
+import exceptions.StudentNotFoundException;
+
+import java.io.Serializable;
+import java.util.ArrayList;
+import java.util.Objects;
+
+public class Course implements Serializable {
+    private BeheshtiUniversityField beheshtiUniversityField;
+    private String name;
+    private int credit;
+    private String teacherName;
 
     public Course(String name, int credit) {
         this.name = name;
         this.credit = credit;
-
     }
 
-    String teacherName;
+    private ArrayList<Student> students = new ArrayList<>();
+    private ArrayList<Assignment> AllAssignments = new ArrayList<>();
+    private ArrayList<Assignment> ActiveAssignments = new ArrayList<>();
 
-    ArrayList<StudentCourse> studentCourseVersion = new ArrayList<>();
-    ArrayList<Student> students = new ArrayList<>();
-    ArrayList<Assignment> AllAssignments = new ArrayList<>();
-    ArrayList<Assignment> ActiveAssignments = new ArrayList<>();
+    public Course(String name) {
+        this.name = name;
+    }
 
-    /**
-     * Adds a student to this course.
-     * Associates the student with the course and updates the student's term information.
-     *
-     * @param student The student to be added.
-     */
+    public Course() {
+    }
+
     public void AddStudent(Student student) {
         students.add(student);
-        studentCourseVersion.add(new StudentCourse(name, credit));
-        student.terms.getLast().studentCourses.add(studentCourseVersion.getLast());
+        student.getTerms().get(student.getTerms().size() - 1).getStudentCourses().add(new StudentCourse(name, credit));
     }
-    /**
-     * Removes a student from this course.
-     * Disassociates the student from the course and updates the student's term information.
-     *
-     * @param student The student to be removed.
-     */
+
     public void RemoveStudent(Student student) {
-        student.terms.getLast().studentCourses.remove(studentCourseVersion.get(students.indexOf(student)));
-        students.remove(student);
-    }
-    /**
-     * Retrieves the top-performing student in this course.
-     * The top student is determined based on their scores in the course.
-     *
-     * @return The student with the highest score.
-     */
-    public Student GetTopStudent() {
-        Student[] s = new Student[students.size()];
-        for (int i = 0; i < students.size(); i++) {
-            s[i] = students.get(i);
+        if (student == null) {
+            throw new StudentNotFoundException();
         }
-        sort(s);
-
-        return s[students.size() - 1];
-    }
-
-    private void sort(Student[] students) {
-        for (int i = 0; i < students.length - 1; i++) {
-            for (int j = 0; j < students.length - i - 1; j++) {
-                if (students[j].terms.getLast().studentCourses.get(students[j].terms.getLast().studentCourses.indexOf(studentCourseVersion.get(this.students.indexOf(students[j])))).score > students[j+1].terms.getLast().studentCourses.get(students[j+1].terms.getLast().studentCourses.indexOf(studentCourseVersion.get(this.students.indexOf(students[j+1])))).score) {
-                    Student temp = students[j];
-                    students[j] = students[j + 1];
-                    students[j + 1] = temp;
-                }
-            }
+        try {
+            student.getTerms().get(student.getTerms().size() - 1).getStudentCourses().remove(new StudentCourse(name, credit));
+            students.remove(student);
+        } catch (Exception exception) {
+            throw new StudentNotFoundException();
         }
-
     }
 
     public int getCredit() {
@@ -85,5 +57,73 @@ public class Course {
 
     public void setName(String name) {
         this.name = name;
+    }
+
+
+    public ArrayList<Assignment> getActiveAssignments() {
+        return ActiveAssignments;
+    }
+
+    public void setActiveAssignments(ArrayList<Assignment> activeAssignments) {
+        ActiveAssignments = activeAssignments;
+    }
+
+
+    public ArrayList<Assignment> getAllAssignments() {
+        return AllAssignments;
+    }
+
+    public void setAllAssignments(ArrayList<Assignment> allAssignments) {
+        AllAssignments = allAssignments;
+    }
+
+
+    public BeheshtiUniversityField getBeheshtiUniversityField() {
+        return beheshtiUniversityField;
+    }
+
+    public void setBeheshtiUniversityField(BeheshtiUniversityField beheshtiUniversityField) {
+        this.beheshtiUniversityField = beheshtiUniversityField;
+    }
+
+
+    public ArrayList<Student> getStudents() {
+        return students;
+    }
+
+    public void setStudents(ArrayList<Student> students) {
+        this.students = students;
+    }
+
+
+    public String getTeacherName() {
+        return teacherName;
+    }
+
+    public void setTeacherName(String teacherName) {
+        this.teacherName = teacherName;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+        Course course = (Course) o;
+        return Objects.equals(name, course.name);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hashCode(name);
+    }
+
+    @Override
+    public String toString() {
+        return "Course{" +
+                "name='" + name + '\'' +
+                ", credit=" + credit +
+                ", teacherName='" + teacherName + '\'' +
+                ", students=" + students +
+                '}';
     }
 }
